# symmetric-polynomials

./: .gitignore  Cargo.toml  README.md  idea.md  invarient_unlimited.csv
examples/: init.rs  wl_test.rs
src/: invariant.rs  lib.rs  polynom.rs  weisfeiler_leman.rs
