[package]
name = "symmetric-polynomials"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[profile.release]
opt-level = "z"
lto = "fat"

[[bin]]
name = "invariant"
path = "src/invariant.rs"

[dependencies]
itertools = "*"
clap = { version = "4.5.43", features = ["derive"] }
petgraph = "0.6.5"
wl_isomorphism = "0.1.1"
